Fixed overflow on mobile

--- a/app/globals.css
+++ b/app/globals.css
@@ -224,13 +224,6 @@
         }
     }
 
-    .animate-scroll-down {
-        animation: scrollDown linear infinite;
-    }
-
-    .animate-scroll-up {
-        animation: scrollUp linear infinite;
-    }
 }
 
 
